--- a/builder/css/custom.css
+++ b/builder/css/custom.css
@@ -19,6 +19,7 @@
   font-weight: bold;
   cursor:default;
 }
+
 .navbar-inverse a.navbar-brand{
   width: 230px;
   text-align: center;
@@ -951,4 +952,13 @@ input.form-control.parameter{
   margin-left: 7px;
   border-left: 2px solid #1b809e;
   padding-left: 3px;
+}
+
+.popover-title {
+  word-wrap: break-word;
+  word-break: break-all
+}
+
+small {
+  color: #777 !important
 }
