--- a/builder/css/custom.css
+++ b/builder/css/custom.css
@@ -599,7 +599,7 @@ span.text-fit {
   transform: rotate(-90deg);
 }
 #collapseFilters > .panel-body{
-  padding: 8px;
+  padding: 0 15px;
 }
 #collapseFilters > .panel-body > .input-group > label{
   cursor: pointer;
@@ -675,147 +675,12 @@ li.deprecated.used, li.deprecated.show {
 }
 
 /* CUSTOM CHECKBOX */
-.rudder-form  input[type=checkbox] + .label-radio{
+input[type=checkbox].form-control {
   border-radius: 3px;
 }
-.rudder-form input[type=radio] + .label-radio,.rudder-form  input[type=checkbox] + .label-radio{
-  display: inline-block;
-  height: 15px;
-  width: 15px;
-  border: 2px solid rgb(198, 200, 201);
-  text-align: center;
-  line-height: 34px;
-  position: relative;
-  top: 5px;
-  margin-bottom:0;
-  background-color: #fff;
-}
-.rudder-form input[type=radio] + .label-radio{
-  border-radius: 50%;
-}
-.rudder-form  input[type=radio] + .label-radio + .text-radio,.rudder-form  input[type=checkbox] + .label-radio + .text-radio{
-  -webkit-animation: text-radio-off .2s ease-in forwards;
-  -moz-animation: text-radio-off .2s ease-in forwards;
-  -o-animation: text-radio-off .2s ease-in forwards;
-  animation: text-radio-off .2s ease-in forwards;
-}
-.rudder-form  input[type=radio]:checked + .label-radio + .text-radio,.rudder-form  input[type=checkbox]:checked + .label-radio + .text-radio{
-  -webkit-animation: text-radio-on .2s ease-in forwards;
-  -moz-animation: text-radio-on .2s ease-in forwards;
-  -o-animation: text-radio-on .2s ease-in forwards;
-  animation: text-radio-on .2s ease-in forwards;
-}
-.rudder-form  input[type=radio] + .label-radio span,.rudder-form  input[type=checkbox] + .label-radio span{
-  font-size: 9px;
-  top: -12.5px;
-  left: 0.1px;
-  position: relative;
-  visibility:hidden;
-  animation: opacity-0 .2s linear forwards;
-}
-.rudder-form  input[type=radio]:checked + .label-radio span,.rudder-form  input[type=checkbox]:checked + .label-radio span{
-  visibility:visible;
-  animation: opacity-1 .2s linear forwards;
-}
-.rudder-form .text-radio{
-  position: relative;
-  top: -6px;
-  margin-left: 8px;
-}
-.rudder-form input[type=radio],.rudder-form input[type=checkbox]{
-  display: none;
-}
-.rudder-form input[type=radio]:disabled + .label-radio,.rudder-form input[type=checkbox]:disabled + .label-radio{
-  background-color: rgb(236,236,236);
-}
-.rudder-form  input[type=radio]:disabled + .label-radio span,.rudder-form  input[type=checkbox]:disabled + .label-radio span{
-  color:#898989;
-}
-.rudder-form input[type=radio]:checked:disabled + .label-radio + .text-radio, .rudder-form input[type=checkbox]:checked:disabled + .label-radio + .text-radio,.rudder-form input[type=radio]:disabled + .label-radio + .text-radio, .rudder-form input[type=checkbox]:disabled + .label-radio + .text-radio{
-  color: #B7B4B4;
-  -webkit-animation:none;
-  -moz-animation:none;
-  -o-animation:none;
-  animation:none;
-}
-ul.list-sm{
-  list-style-type: none;
-}
-ul.list-sm .rudder-form  input[type=checkbox] + .label-radio + .check-icon{
-  font-size:12px;
-}
-ul > li.rudder-form:first-child > .input-group label.form-control,ul > li.rudder-form:first-child > .input-group .input-group-addon{
-  border-top:1px solid #d0d0d0;
-}
-#denyBadClocksForm ul > li:first-child > .input-group .input-group-addon,ul > li.rudder-form:first-child > .input-group .input-group-addon{
-  border-top-left-radius:4px;
-}
-#denyBadClocksForm ul > li:last-child > .input-group .input-group-addon,ul > li.rudder-form:last-child > .input-group .input-group-addon{
-  border-bottom-left-radius:4px;
-}
-ul > li.rudder-form:first-child > .input-group label.form-control{
-  border-top-right-radius:4px;
-}
-ul > li.rudder-form label{
-  cursor:pointer;
-}
-ul > li.rudder-form > .input-group label.form-control{
-  border-top-right-radius:0;
-  border-bottom-right-radius:0;
-  font-weight: 500;
-  color: #555;
-  font-size: 14px;
-}
-ul.list-sm > li.rudder-form > .input-group label.form-control{
+
+.input-group-addon input[type=checkbox].form-control {
   height: auto;
-  min-height: 34px;
-  font-size: 14px;
-}
-ul > li.rudder-form > .input-group .input-group-addon{
-  padding: 3px 11px;
-  background-color: #f4f4f4;
-}
-ul.list-sm > li.rudder-form > .input-group .input-group-addon{
-  padding: 0 11px;
-}
-ul > li.rudder-form > .input-group label.form-control .glyphicon.info{
-  top:3px;
-}
-ul > li.rudder-form:last-child > .input-group label.form-control{
-  border-bottom-right-radius:4px;
-  padding-top: 6px;
-}
-ul > li.rudder-form > .input-group label.form-control,ul > li.rudder-form > .input-group .input-group-addon{
-  border-top:none;
-}
-ul > li.rudder-form > .input-group label.form-control{
-  padding-right: 40px;
-}
-ul > li.rudder-form > .input-group.disabled label.form-control,ul > li.rudder-form > .input-group.disabled .input-group-addon{
-  background-color: #eeeeee;
-  cursor:no-drop;
-}
-ul > li.rudder-form > .input-group.disabled *{
-  cursor:no-drop;
-}
-.rudder-form  input[type=checkbox] + .label-radio + .check-icon,.rudder-form  input[type=radio] + .label-radio + .check-icon{
-  position: absolute;
-  top: calc(50% - 7px);
-  right: 15px;
-  color: #222d32;
-  z-index: 10;
-  visibility:hidden;
-  animation: opacity-0 .1s linear forwards;
-}
-.list-sm .rudder-form  input[type=checkbox] + .label-radio + .check-icon,.rudder-form  input[type=radio] + .label-radio + .check-icon{
-  top: 11px;
-}
-.rudder-form .disabled input[type=checkbox] + .label-radio + .check-icon,.rudder-form  .disabled input[type=radio] + .label-radio + .check-icon{
-  color: #7d7d7d;
-}
-.rudder-form  input[type=checkbox]:checked + .label-radio + .check-icon,.rudder-form  input[type=radio]:checked + .label-radio + .check-icon{
-  visibility:visible;
-  animation: opacity-1 .1s linear forwards;
 }
 
 .deprecated-icon{
