--- a/builder/css/custom.css
+++ b/builder/css/custom.css
@@ -72,6 +72,9 @@ hr {
     padding-bottom: 3px;
   }
 }
+.btn-xs {
+  padding: 5px 5px 1px;
+}
 
 .btn.btn-success{
   background-color: #9bc832;
@@ -149,6 +152,10 @@ hr {
 .panel-body {    
     padding: 15px 0 0 0;
 }
+
+ #methodBlock .panel-body{
+   padding-top: 0;
+ }
 
 a:hover {
     text-decoration: none;
@@ -846,4 +853,30 @@ input.form-control.parameter{
 
 .text-classic {
   color: #333;
+}
+
+pre.whitespace {
+  max-height: 300px;
+}
+
+.markdown {
+    display: block;
+    padding: 9.5px;
+    margin: 10px 0;
+    font-size: 13px;
+    line-height: 1.42857143;
+    color: #333;
+    word-break: break-all;
+    word-wrap: break-word;
+    background-color: #f5f5f5;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.markdown p {
+  margin: 0;
+}
+
+.markdown li {
+  margin-left: 15px
 }
