Fixes #14294: Fix compliance bars text color

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-progress-bar.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-progress-bar.css
@@ -39,6 +39,10 @@
 /*
  * Colours for our progress bars
  */
+
+.content-wrapper .progress .progress-bar{
+  color: #fff;
+}
 .content-wrapper .progress-bar-reportsdisabled {
   background-color: #b4b4b4;
 }
