Fixes #9557: Change Datatables style

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-directives.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-directives.css
@@ -106,6 +106,9 @@
 #directiveRulesTab .only-tags .btn-xs.pull-right{
   float:left !important;
 }
+#grid_rules_grid_zone tr.head th {
+    padding: 4px 6px;
+}
 #edit-box{
   padding:10px;
   overflow-y:auto;
