Fixes #11911: Rule list on group

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/NodeGroupForm.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/NodeGroupForm.html
@@ -22,7 +22,7 @@
     <div id="createCloneGroupContainer" ></div>
   </div>
 </div>
-    
+
 <div>
   <div id="confirmUpdateActionDialog" class="modal fade" data-keyboard="true" tabindex="-1" ></div>
 </div>
@@ -32,6 +32,7 @@
 <div id="GroupTabs">
   <ul id="groupTabMenu">
     <li><a href="#groupParametersTab">Group parameters</a></li>
+    <li><a href="#groupRulesTab">Applied Rules</a></li>
   </ul>
 
   <div id="groupParametersTab">
@@ -80,10 +81,8 @@
         </div>
       </div>
      </div>
-<!--
-    <group-removeform></group-removeform>
--->
   </div>
+  <div id="groupRulesTab">  </div>
 </div>
 </component-body>
 </xml:group>
