Fixes #11911: Rule list on group

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/NodeGroupForm.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/NodeGroupForm.html
@@ -82,7 +82,7 @@
       </div>
      </div>
   </div>
-  <div id="groupRulesTab">  </div>
+  <div id="groupRulesTab"><div id="groupRuleTabsContent"></div> </div>
 </div>
 </component-body>
 </xml:group>
