Fixes #11796: System groups should display their list of nodes

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/NodeGroupForm.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/NodeGroupForm.html
@@ -82,7 +82,11 @@
       </div>
      </div>
   </div>
-  <div id="groupRulesTab">  </div>
+  <div id="groupRulesTab">
+    <div class="section-title">
+      This group is a target of the following rules:
+    </div>
+    <div id="groupRuleTabsContent"></div> </div>
 </div>
 </component-body>
 </xml:group>
